--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     </string-array>
 
     <string-array name="restaurants">
-        <item>Marry Brown</item>
+        <item>Marrybrown</item>
         <item>McDonalds</item>
         <item>KFC</item>
         <item>Pizza Hut</item>
